bib log files etc.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ Standard/OMG_OntoIOp_current.out
 Standard/OMG_OntoIOp_current.pdf
 Standard/OMG_OntoIOp_current.synctex.gz
 Standard/OMG_OntoIOp_current.toc
+*bbl
+*blg
+*log
+*~
